# Lang-Graph-From-Zero-To-Hero

./: README.md  installation_setup.ipynb  main.py  pyproject.toml  requirements.txt
1_GenerativeAIvsAgenticAI/: Note.md
2_WhatIsAgenticAI/: AgenticAI.md
3_ LangChainVsLangGraph/: LangChainVsLangGraph.md
4_ LangGraphCoreConcepts/: LangGraphCoreConcepts.md
5_SequentialWorkflows/: Note.md  SimpleLinearWorkflow.ipynb  prompt_chaining_llm_workflow.ipynb  simple_llm_workflow.ipynb
6_ParallelWorkflows/: Note.md  parallelworkflow.ipynb
RoadMapAgenticAIUsingLangGraph/: AgenticAIUsingLangGraph.md
