[project]
name = "lang-graph-from-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.13.0",
    "faiss-cpu>=1.13.2",
    "google-generativeai>=0.8.6",
    "grandalf>=0.8",
    "huggingface-hub>=1.9.2",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pageindex>=0.2.8",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "scikit-learn>=1.8.0",
    "selenium>=4.41.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
